# FreeDee

./: CMakeLists.txt  Drawable.h  Shape.cpp  Shape.h  Shape2D.h  StbiHelper.cpp  StbiHelper.h  main.cpp
cmake/: FindGLFW.cmake  FindGLM.cmake  FindSTBI.cmake  FindTOL.cmake
diagrams/: Animation.dia  Audio.dia  Collision.dia  Renderer.dia
src/: main.cpp
src/Renderer/: Shape.h  StbImage.cpp  StbImage.h
